Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • L libevdev
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 0
    • Issues 0
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 1
    • Merge requests 1
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • libevdev
  • libevdev
  • Issues
  • #15
Closed
Open
Issue created Jul 10, 2020 by Jan Tojnar@jtojnar

test_value_to_name_invalid failing on aarch64

When running the test suite on NixOS system with aarch64 architecture, it seems to fail with:

=================================== FAILURES ===================================
________________ TestNameConversion.test_value_to_name_invalid _________________
self = <test_clib.TestNameConversion testMethod=test_value_to_name_invalid>
    def test_value_to_name_invalid(self):
        name = Libevdev.event_to_name(3, 0x37, 1000)
        self.assertIsNone(name)
        name = Libevdev.event_to_name(3, 0x37, -1)
>       self.assertIsNone(name)
E       AssertionError: 'MSC_MAX' is not None
test/test_clib.py:106: AssertionError

x86_64 seems to work.

  • Python 3.8.
  • python-libevdev 0.9
  • libevdev 1.9.0

Downstream link: https://github.com/NixOS/nixpkgs/pull/92715#issuecomment-655637413

Edited Jul 10, 2020 by Jan Tojnar
Assignee
Assign to
Time tracking